@@ -28,5 +28,14 @@ int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 
 	zbx_snprintf(counter_path, sizeof(counter_path), "\\%d\\%d", PCI_SYSTEM, PCI_SYSTEM_UP_TIME);
 
-	return PERF_MONITOR(cmd, counter_path, flags, result);
+	if (SYSINFO_RET_FAIL == PERF_MONITOR(cmd, counter_path, flags, result))
+		return SYSINFO_RET_FAIL;
+
+	/* result must be integer to correctly interpret it in frontend (uptime) */
+	if (!GET_UI64_RESULT(result))
+		return SYSINFO_RET_FAIL;
+
+	UNSET_RESULT_EXCLUDING(result, AR_UINT64);
+
+	return SYSINFO_RET_OK;
 }
